--- a/service/package.json
+++ b/service/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.8.0",
     "@google-cloud/vertexai": "^1.9.2",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
