--- a/service/package.json
+++ b/service/package.json
@@ -21,6 +21,8 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth": "3",
+    "remix-auth-google": "^2.0.0",
     "ulid": "^2.3.0",
     "winston": "^3.17.0"
   },
