--- a/service/package.json
+++ b/service/package.json
@@ -8,7 +8,18 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "generate-favicon": "tsx scripts/generate-favicon.ts"
+  },
+  "pnpm": {
+    "supportedArchitectures": {
+      "os": [
+        "darwin"
+      ],
+      "cpu": [
+        "x64"
+      ]
+    }
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
@@ -19,6 +30,7 @@
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
     "isbot": "^4.1.0",
+    "optional": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "3",
@@ -40,7 +52,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
