Error: Cannot find module @rollup/rollup-linux-x64-gnu.

--- a/service/package.json
+++ b/service/package.json
@@ -11,16 +11,6 @@
     "typecheck": "tsc",
     "generate-favicon": "tsx scripts/generate-favicon.ts"
   },
-  "pnpm": {
-    "supportedArchitectures": {
-      "os": [
-        "darwin"
-      ],
-      "cpu": [
-        "x64"
-      ]
-    }
-  },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/storage": "^7.15.0",
@@ -61,5 +51,13 @@
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.34.2"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   }
 }
