--- a/service/package.json
+++ b/service/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/storage": "^7.15.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google-cloud/vertexai": "^1.9.2",
+    "@remix-pwa/worker-runtime": "^2.1.4",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
@@ -29,12 +30,14 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@remix-pwa/dev": "^3.1.0",
     "@remix-run/dev": "^2.15.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
+    "esbuild": "^0.24.2",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
