--- a/service/package.json
+++ b/service/package.json
@@ -16,10 +16,12 @@
     "@google-cloud/storage": "^7.15.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google-cloud/vertexai": "^1.9.2",
+    "@remix-pwa/sw": "^3.0.10",
     "@remix-pwa/worker-runtime": "^2.1.4",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "ajv": "^8.17.1",
     "isbot": "^4.1.0",
     "optional": "^0.1.4",
     "react": "^18.2.0",
@@ -38,7 +40,7 @@
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.24.2",
-    "eslint": "^8.38.0",
+    "eslint": "^8.57.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
