--- a/service/package.json
+++ b/service/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.11.0",
     "@google-cloud/storage": "^7.15.0",
+    "@google-cloud/tasks": "^5.5.2",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@google-cloud/vertexai": "^1.9.2",
     "@remix-pwa/sw": "^3.0.10",
